# memoric

./: .gitignore  AUDIT_LOGGING_COMPLETE.md  AUTHENTICATION_GUIDE.md  CODEBASE_REVIEW.md  CODE_AUDIT.md  COMPLETE_PROJECT_SUMMARY.md  COMPREHENSIVE_REVIEW.md  CONFIGURATION_GUIDE.md  CONFIGURATION_STATUS.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  DEVELOPER_EXPERIENCE_IMPROVEMENTS.md  FIXES_SUMMARY.md  FRAMEWORK_AUDIT.md  INSTALLATION.md  INSTALLATION_AND_IMPORTS.md  INTEGRATION_GUIDE.md  MAJOR_FIXES_APPLIED.md  MANIFEST.in  MIGRATION_GUIDE.md  MINOR_FIXES_APPLIED.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_FINAL_STATUS.md  PHASE6_STATUS.md  PHASE6_SUMMARY.md  PROJECT_SUMMARY.md  PROPOSED_DEVELOPER_API.md  README.md  README_SIMPLE.md  RESTRUCTURE_COMPLETE.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SESSION_SUMMARY.md  TEXT_PROCESSING_FEATURE.md  TEXT_PROCESSING_GUIDE.md  __init__.py  alembic.ini  memoric_cli.py  (+6 more)
.github/workflows/: ci.yml  release.yml  test.yml
agents/: metadata_agent.py
alembic/: env.py
alembic/versions/: 20250115_0001_initial_schema.py
api/: server.py
core/: clustering.py  config_loader.py  memory_manager.py  policy_executor.py  retriever.py
db/: postgres_connector.py
docs/: CLEANUP_AUDIT.md  COMPLETION_CHECKLIST.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTEXT_ASSEMBLER_ANALYSIS.md  FEATURES_INTEGRATION_MAP.md  IMPLEMENTATION_COMPLETE.md  NEW_FEATURES_IMPLEMENTED.md  PROJECT_STATUS.md  PYPI_PUBLISHING_GUIDE.md  README.md  TRANSFORMATION_SUMMARY.md
docs/archive/: AUDIT_LOGGING_COMPLETE.md  INSTALLATION.md  JWT_AUTHENTICATION_COMPLETE.md  QUICK_START.md  README.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_IMPLEMENTATION_STATUS.md
examples/: api_usage.py  chatbot.py  custom_text_processing.py  demo_basic.py  demo_clustering.py  demo_clustering_scoring.py  demo_langchain.py  demo_multi_tier.py  demo_rest.py  demo_threads.py  langchain_integration.py  minimal_agent.py  production_agent.py  production_simple.py  production_with_providers.py  quickstart_sdk.py  scheduler_example.py  simple.py
integrations/: __init__.py  langchain_adapter.py
integrations/langchain/: memory.py
memoric/: __init__.py  cli.py  memory.py
memoric/agents/: __init__.py  conversation_manager.py  metadata_agent.py  smart_summarizer.py
memoric/api/: __init__.py  audit_routes.py  auth_middleware.py  auth_routes.py  server.py
memoric/config/: default.yaml  default_config.yaml  quickstart_config.yaml
memoric/core/: __init__.py  clustering.py  config_loader.py  config_validator.py  context_assembler.py  hybrid_retriever.py  memory_manager.py  policy_config.py  policy_executor.py  retriever.py  semantic_search.py
memoric/db/: __init__.py  audit_schema.py  auth_schema.py  postgres_connector.py  postgres_connector.py.bak
memoric/integrations/: __init__.py  llamaindex.py
memoric/providers/: README.md  __init__.py  cache.py  interfaces.py  vector_stores.py
memoric/utils/: __init__.py  audit_logger.py  auth.py  encryption.py  health_check.py  logger.py  metrics.py  rate_limiter.py  resilience.py  scoring.py  text.py  text_processors.py  user_manager.py
scripts/: check_version_consistency.py
tests/: test_audit_logging.py  test_authentication.py  test_clustering_scoring.py  test_dialect_awareness.py  test_json_filtering_concurrent.py  test_migrations.py  test_multi_tier.py  test_phase1.py  test_policies.py  test_privacy.py  test_sanity.py  test_scope_and_clustering.py  test_threads.py
utils/: scoring.py  text.py
