[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = "\\.pyi?$"
exclude = """
/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist)/
"""

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 100
py_version = 39

[project]
name = "memoric"
version = "0.0.1"
description = "Deterministic, policy-driven memory management for AI agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Memoric Contributors" }]
license = { text = "MIT" }
keywords = ["AI", "agents", "memory", "framework", "retrieval"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
memoric = "memoric.memoric_cli:main"

[project.urls]
Homepage = "https://github.com/your-org/memoric"
Repository = "https://github.com/your-org/memoric"
Issues = "https://github.com/your-org/memoric/issues"


