[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = "\\.pyi?$"
exclude = """
/(\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.nox|\\.tox|\\.venv|_build|buck-out|build|dist)/
"""

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
profile = "black"
line_length = 100
py_version = 39

[project]
name = "memoric"
version = "0.1.0"
description = "Deterministic, policy-driven memory management for AI agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Muthanna Alfaris", email = "ceo@cyberbeam.ie"  }]
license = { text = "Apache-2.0" }
keywords = ["AI", "agents", "memory", "framework", "retrieval", "LLM", "RAG"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pyyaml>=6.0.1",
  "pydantic>=2.8.0",
  "pydantic[email]>=2.8.0",
  "click>=8.1.7",
  "rich>=13.7.1",
  "sqlalchemy>=2.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "cryptography>=41.0.0",
  "pyjwt>=2.8.0",
  "passlib>=1.7.4",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0.0",
]
metrics = [
  "prometheus-client>=0.19.0",
]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "mypy",
  "build",
]
all = [
  "openai>=1.0.0",
  "prometheus-client>=0.19.0",
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "mypy",
  "build",
]

[project.scripts]
memoric = "memoric.cli:main"

[project.urls]
Homepage = "https://github.com/cyberbeamhq/memoric"
Repository = "https://github.com/cyberbeamhq/memoric"
Issues = "https://github.com/cyberbeamhq/memoric/issues"


